--- a/assets/style/splitbills.css
+++ b/assets/style/splitbills.css
@@ -20,6 +20,55 @@
         width: 100%;
         margin: 0;
     }
+    .dropdown{
+        display: none;
+        width: 28px;
+        height:28px;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+    }
+
+    .dropbtn {
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      .dropbtn:hover, .dropbtn:focus {
+        background-color: #2980B9;
+      }
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      .dropdown-content a {
+        display: block;
+        color: #161616;
+        font-family: Gothaml;
+        font-size: 20px;
+        text-decoration: none;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 19px;
+        align-items: center;
+        opacity: 0.6;
+        padding: 12px 16px;
+        text-decoration: none;
+      
+      }
+      
+      .dropdown a:hover {background-color: #ddd;}
+      
+      .show {display: block;}
     
     .nav-container {
         max-width: 100%;
@@ -225,13 +274,19 @@
         height: 498px;
         padding-top: 34px;
         margin-left: 61px;
+
+    }
+    .phone img{
+        width: 268px;
+        height: 498px;
+        object-fit: cover;
     }
     
     .transaction-text {
         width: 724px;
         height: 303px;
         margin-top: 129px;
-        margin-left: 82.5px;
+        margin-left: 79.0px;
     }
     
     .transaction-text h1 {
@@ -244,8 +299,15 @@
         color: #FFFFFF;
         opacity: 0.9;
         line-height: 60px;
+        
     }
-    
+    h1{
+        height: 113px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+    }
+ 
     .transaction-text span {
         font-family: Roboto Slab;
         font-style: normal;
@@ -269,6 +331,19 @@
         display: flex;
         align-items: center;
     }
+    h4{
+        height: 27px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+    } 
+    h2{
+        height: 27px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+    }
+    
     
     .app {
         width: 390px;
@@ -279,12 +354,12 @@
     
     .googlepay img {
         margin: 0px 40px 0px 0px;
+        object-fit: cover;
     }
     
     .appstore img {
         width: 172px;
         height: 72px;
-        ;
     }
     
     .main-section-sponsor-section {
@@ -295,6 +370,7 @@
     }
     
     .section-sponsor {
+        display: flex;
         width: 1240px;
         height: 178px;
     }
@@ -321,6 +397,7 @@
         height: 113.94px;
         margin: 1px 0px 0px 0px;
         padding: 0px 0px 0px 0px;
+        object-fit: cover;
     }
     
     .group-partner2 {
@@ -332,7 +409,10 @@
     }
     
     .group-partner2 img {
+        width: 154.72px;
+        height: 115.94px;
         padding: 0px 0px 0px 0px;
+        object-fit: cover;
     }
     
     .group-partner3 {
@@ -342,7 +422,10 @@
     }
     
     .group-partner3 img {
+        width: 154.72px;
+        height: 115.94px;
         padding: 0px 0px 0px 0px;
+        object-fit: cover;
     }
     
     .group-partner4 {
@@ -353,7 +436,7 @@
     
     .group-partner4 img {
         padding: 0px 0px 0px 0px;
-        ;
+        object-fit: cover;
     }
     /* =========================MAIN SECTION2 SOCIALIZING ================================ */
     
@@ -421,6 +504,12 @@
         opacity: 0.6;
         text-align: center;
     }
+    .main-section2-become-content p{
+        height: 175px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+    }
     
     .main-section2-sociali-group {
         top: 450px;
@@ -471,6 +560,13 @@
         align-items: center;
         text-align: center;
     }
+    .main-section3-content-title p{
+        height: 71px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+    }
+
     
     .main-section3-content-multi {
         width: 1240px;
@@ -497,6 +593,9 @@
         line-height: 60px;
         display: flex;
         align-items: center;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .multi-text2 {
@@ -511,6 +610,9 @@
         line-height: 40px;
         color: #161616;
         opacity: 0.6;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .main-section3-multi-img {
@@ -519,6 +621,13 @@
         margin-top: 50px;
         margin-left: 44px;
     }
+    .main-section3-multi-img img,.main-section3-safety-img img,.main-section3-cashless-img img{
+        width: 542px;
+        height: 361px;
+        object-fit: cover;
+    }
+  
+
     
     .main-section3-content-safety {
         width: 1240px;
@@ -544,6 +653,9 @@
         line-height: 60px;
         display: flex;
         align-items: center;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .safety-text2 {
@@ -556,6 +668,9 @@
         font-weight: normal;
         font-size: 28px;
         line-height: 40px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .main-section3-safety-img {
@@ -564,7 +679,10 @@
         margin-top: 50px;
         margin-left: 50px;
     }
-    
+    .main-section3-safety-img {
+        width: 542px;
+        height: 361px;
+    }
     .main-section3-content-cashless {
         width: 1240px;
         height: 461px;
@@ -573,11 +691,7 @@
         background: rgba(18, 158, 252, 0.1);
         display: inline-flex;
     }
-    /* .main-section3-content-cashless-text {
-        display: block;
-        justify-content: center;
-    } */
-    
+
     .cashless-text1 {
         width: 403px;
         height: 60px;
@@ -590,11 +704,14 @@
         line-height: 60px;
         display: flex;
         align-items: center;
-        /* padding: 0px 0px 0px 0px !important; */
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+ 
     }
     
     .cashless-text2 {
-        /* width: 465px; */
+      
         height: 40px;
         margin-top: 10px;
         margin-left: 50px;
@@ -606,6 +723,9 @@
         line-height: 40px;
         color: #161616;
         opacity: 0.6;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
         
     }
     
@@ -641,7 +761,7 @@
     .main-section-content {
         width: 1091px;
         height: 546px;
-        /* margin: 85px 50px 0px 50px; */
+      
     }
     
     .main-section4-title {
@@ -657,6 +777,9 @@
         color: #161616;
         margin-left: 465px;
         margin-right: 539px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .section4-promo1 {
@@ -682,6 +805,9 @@
         font-style: normal;
         font-size: 28px;
         color: #FFFFFF;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
     }
     
     .line br {
@@ -725,6 +851,9 @@
         align-items: center;
         text-align: center;
         color: #FFFFFF;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .section4-promo2-img img {
@@ -753,6 +882,9 @@
         align-items: center;
         text-align: center;
         color: #FFFFFF;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
     }
     
     .section4-promo3-img img {
@@ -796,6 +928,7 @@
         display: flex;
         align-items: center;
         color: #FFFFFF;
+    
       
     }
     
@@ -812,6 +945,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 30px;
+    
     }
     
     .group1-content1-text3 {
@@ -826,6 +960,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+    
     }
     
     .group1-content1-text4 {
@@ -841,6 +976,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+    
     }
     
     .group1-content1-text5 {
@@ -856,6 +992,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+     
     }
     
     .group1-content1-text6 {
@@ -871,6 +1008,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+   
     }
     
     .section-group1-content2 {
@@ -893,6 +1031,7 @@
         display: flex;
         align-items: center;
         color: #FFFFFF;
+    ;
     }
     
     .group1-content2-text2 {
@@ -909,6 +1048,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 30px;
+     
     }
     
     .group1-content2-text3 {
@@ -925,6 +1065,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+   
     }
     
     .group1-content2-text4 {
@@ -941,6 +1082,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+     
     }
     
     .group1-content2-text5 {
@@ -957,6 +1099,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+       
     }
     
     .group1-content2-text6 {
@@ -973,6 +1116,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 10px;
+       
     }
     
     .section-group1-content3 {
@@ -995,6 +1139,7 @@
         display: flex;
         align-items: center;
         color: #FFFFFF;
+       
         
     }
     
@@ -1022,6 +1167,7 @@
         color: black;
         opacity: 0.6;
         margin: 14px 0px 1px 0px;
+       
     }
     
     .content3-submit-input {
@@ -1074,6 +1220,7 @@
         align-items: center;
         color: #FFFFFF;
         margin-top: 0px;
+     
     }
     
     .group1-content4-googlepay img {
@@ -1123,6 +1270,7 @@
         color: #FFFFFF;
         margin-top: 33px;
         margin-bottom: 32px;
+       
     }
     
     .section-group2-privacy p {
@@ -1139,6 +1287,7 @@
         margin-left: 39px;
         margin-top: 33px;
         margin-bottom: 32px;
+       
     }
     
     .section-group2-cardholder p {
@@ -1155,6 +1304,8 @@
         margin-left: 39px;
         margin-top: 33px;
         margin-bottom: 32px;
+     
+        
     }
     
     .footer-section-splitbills p {
@@ -1170,6 +1321,7 @@
         margin-left: 58px;
         margin-top: 33px;
         margin-bottom: 32px;
+
     }
     
     .link-group {
@@ -1178,3 +1330,5 @@
         margin-bottom: 800px;
         margin-right: 158px;
     }
+
+  
