refs task [FE] Create Agency Interface

--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -700,12 +700,11 @@
                         color: #FFFFFF;
                     }
                     
-                    .swiper-slide {
+                    #swiper1__slide1__section4 {
                         position: relative;
                         width: 480px !important;
                         height: 682px !important;
                         margin: auto;
-                        /* overflow: hidden */
                     }
                     
                     .swiper-slide .swiper-slide-overlay {
@@ -736,9 +735,11 @@
                         height: 682px !important;
                     }
                     
-                    img {
+                    .swiper-slide__image1 img {
+                        width: 431px!important;
                         box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
-                        border-radius: 5px
+                        border-radius: 5px;
+                        object-fit: cover;
                     }
                     
                     .swiper-slide-details {
@@ -781,11 +782,19 @@
                         top: 80%
                     }
                     
-                    .swiper-wrapper {
+                    #swiper-wrapper4 {
                         width: 1600px !important;
                         height: 881px !important;
                         margin-top: 86px !important;
                         margin-left: -557px !important;
+                        overflow: visible !important;
+                    }
+                    
+                    #swiper-wrapper5 {
+                        width: 1600px !important;
+                        height: 881px !important;
+                        margin-top: 86px !important;
+                        margin-left: -460px !important;
                         overflow: visible !important;
                     }
                     
@@ -888,10 +897,10 @@
                         box-sizing: border-box !important;
                     }
                     /* ================SECTION5========================= */
-                    /* #swiper__service__section5 {
-                        width: 1373px !important;
-                        margin-top: 107px !important;
+                    /* #container__section5 {
+                        max-width: 1373px !important;
                         height: 636px !important;
+                        margin-top: 107px !important;
                     }
                      */
                     
@@ -909,17 +918,42 @@
                         align-items: center;
                         color: #FFFFFF;
                     }
-                    /*                     
-                    #swiper-pagination2 {
-                        margin-top: -1000px !important;
-                        margin-left: 100px !important;
+                    
+                    #pagination2 {
+                        margin-top: 120px !important;
+                    }
+                    
+                    .swiper-slide__image1 img {
+                        width: 431px !important;
+                        height: 325px !important;
+                        object-fit: cover;
+                    }
+                    
+                    .img2 {
+                        width: 431px !important;
+                        height: 325px !important;
+                        object-fit: cover;
+                    }
+                    
+                    #swiper1__slide1__section5 {
+                        position: relative;
+                        width: 431px !important;
+                        height: 636px !important;
+                        margin: auto;
+                        margin-left: 39px !important;
+                    }
+                    
+                    #pagination2 {
+                        width: 140px !important;
+                        height: 24px !important;
+                        margin-top: -88px !important;
                     }
                     
                     .count__number2 {
-                        width: 48px !important;
-                        height: 36px !important;
-                        margin-top: 132px !important;
-                        margin-left: 1210px !important;
+                        width: 48px;
+                        height: 36px;
+                        margin-top: -380px !important;
+                        margin-left: 1100px !important;
                         font-family: Poppins;
                         font-style: normal;
                         font-weight: 600;
@@ -927,59 +961,28 @@
                         line-height: 36px;
                         align-items: center;
                         color: #FFFFFF;
-                    } */
-                    /* #swiper__wrapper__service {
-                        width: 431px !important;
-                        height: 325px !important;
-                    }
-                    
-                    .swiper-slide #swiper-slide__1 {
-                        width: 431px !important;
-                        height: 325px !important;
-                    }
-                    
-                    .swiper-slide #swiper-slide__image1 {
-                        width: 431px !important;
-                    }
-                    
-                    .swiper-slide .swiper-slide__image1 img {
-                        width: 431px !important;
-                        height: 325px !important;
-                    }
-                    
-                    #swiper-slide__1 {
-                        width: 431px !important;
-                        height: 325px !important;
-                        margin-left: 39px !important;
                     }
                     
                     .swiper-slide__icon__design1 {
                         width: 229px !important;
                         height: 36px !important;
                         margin-top: 20px !important;
-                        margin-left: 50px !important;
-                        display: flex !important;
+                        display: flex;
                     }
                     
-                    .swiper-slide__icon__design1 .swiper-slide__design1 {
-                        max-width: 173px !important;
-                        height: 36px !important;
-                    } */
-                    /*                     
                     .swiper-slide__icon1 {
                         width: 50px !important;
-                        height: 0px;
-                        margin-top: 20px !important;
-                        margin-left: 50px !important;
+                        height: 0px !important;
+                        margin-top: 15px !important;
                         opacity: 0.6;
                         border: 2px solid #FFFFFF;
                         box-sizing: border-box;
-                    } */
-                    /*                     
+                    }
+                    
                     .swiper-slide__design1 {
-                        max-width: 173px !important;
-                        height: 36px !important;
-                        margin-left: 100px !important;
+                        width: 173px;
+                        height: 36px;
+                        margin-left: 6px !important;
                         font-family: Poppins;
                         font-style: normal;
                         font-weight: normal;
@@ -987,35 +990,42 @@
                         line-height: 36px;
                         align-items: center;
                         color: #FFFFFF;
-                        opacity: 0.6;
-                    } */
-                    /* .swiper-slide__library1 {
-                        width: 293px !important;
-                        height: 42px !important;
+                        opacity: 0.6
+                    }
+                    
+                    .swiper-slide__library1 {
+                        width: 293px;
+                        height: 42px;
+                        font-family: Poppins;
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 28px;
+                        line-height: 42px;
                         margin-top: 14px !important;
-                        margin-left: 70px !important;
-                        font-family: Poppins;
-                        font-style: normal;
-                        font-weight: 600;
-                        font-size: 28px;
-                        line-height: 42px;
                         align-items: center;
                         color: #FFFFFF;
-                    } */
-                    /* .swiper-slide__rest1 {
-                        width: 256px !important;
-                        height: 42px !important;
-                        font-family: Poppins;
-                        font-style: normal;
-                        font-weight: 600;
-                        font-size: 28px;
-                        line-height: 42px;
-                        align-items: center;
-                        color: #FFFFFF;
-                    } */
-                    /* .swiper-slide__archirecture1 {
-                        width: 236px !important;
+                    }
+                    
+                    .swiper-slide__icon__design2 {
+                        width: 292px !important;
                         height: 36px !important;
+                        margin-top: 20px !important;
+                        display: flex;
+                    }
+                    
+                    .swiper-slide__icon2 {
+                        width: 50px;
+                        height: 0px;
+                        opacity: 0.6;
+                        margin-top: 15px !important;
+                        border: 2px solid #FFFFFF;
+                        box-sizing: border-box;
+                    }
+                    
+                    .swiper-slide__design2 {
+                        width: 236px;
+                        height: 36px;
+                        margin-left: 6px!important;
                         font-family: Poppins;
                         font-style: normal;
                         font-weight: normal;
@@ -1024,10 +1034,11 @@
                         align-items: center;
                         color: #FFFFFF;
                         opacity: 0.6;
-                    } */
-                    /* .swiper-slide__building1 {
-                        width: 221px !important;
-                        height: 42px !important;
+                    }
+                    
+                    .swiper-slide__library2 {
+                        width: 221px;
+                        height: 42px;
                         font-family: Poppins;
                         font-style: normal;
                         font-weight: 600;
@@ -1035,38 +1046,6 @@
                         line-height: 42px;
                         align-items: center;
                         color: #FFFFFF;
-                    } */
-                    
-                    .container_section5 .container .swiper-container .swiper-wrapper .swiper-slide {
-                        width: 432px !important;
-                        height: 325px !important;
-                        margin-right: 39px !important;
-                    }
-                    
-                    .container_section5 .container .swiper-container .swiper-wrapper .swiper-slide .active {
-                        width: 432px !important;
-                        height: 279px !important;
-                        margin-right: 40px !important;
-                    }
-                    /* --------------------------------------------------- */
-                    
-                    .swiper-container-horizontal>.swiper-pagination-bullets,
-                    .swiper-pagination-custom,
-                    .swiper-pagination-fraction {
-                        bottom: 10px;
-                        left: 0;
-                    }
-                    
-                    .swiper-pagination-bullet-active {
-                        width: 20px !important;
-                        height: 20px !important;
-                        opacity: 1;
-                        background: var(--swiper-pagination-color, var(--swiper-theme-color));
-                    }
-                    
-                    .swiper-pagination {
-                        height: 24px !important;
-                        font-size: 15px;
                     }
                     /* ======================START FOOTER====================== */
                     
