--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -21,19 +21,6 @@
                         max-width: 1240px !important;
                         margin: auto !important;
                     }
-                    
-                    header .backgrounp {
-                        max-width: 100%;
-                        width: 100%;
-                        height: 100%;
-                        background-color: rgba(49, 49, 49, 0.8);
-                        background: -moz-linear-gradient(top, rgba(49, 49, 49, 0.4) 10%, #1C1C1C 30%);
-                        background: -o-linear-gradient(top, rgba(49, 49, 49, 0.4) 10%, #1C1C1C 30%);
-                        background: -ms-linear-gradient(top, rgba(49, 49, 49, 0.4) 10%, #1C1C1C 30%);
-                        background: -webkit-gradient(linear, left top, left bottom, color-stop(0.3, rgba(49, 49, 49, 0.4)), color-stop(0.9, #1C1C1C));
-                        opacity: 2.5;
-                        /* filter: alpha(opacity=80); */
-                    }
                     /*============================START NAVIGATION===================== */
                     
                     header {
@@ -195,6 +182,9 @@
                         display: flex;
                         flex-wrap: wrap;
                         justify-content: center;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
                     }
                     
                     .display-3 h3 {
@@ -225,6 +215,9 @@
                         align-items: center;
                         text-align: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
                     }
                     
                     .subtext-header {
@@ -244,6 +237,9 @@
                         flex-wrap: wrap;
                         justify-content: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .text__center {
@@ -292,6 +288,9 @@
                         line-height: 36px;
                         display: flex;
                         align-items: center;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .line__1 {
@@ -333,6 +332,9 @@
                         align-items: center;
                         color: #FFFFFF;
                         flex-wrap: wrap;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
                     }
                     
                     #text__right2 {
@@ -347,6 +349,7 @@
                         position: absolute;
                         left: 23px;
                         z-index: 2;
+                        object-fit: cover;
                     }
                     
                     .text__right2__image2 {
@@ -356,6 +359,7 @@
                         bottom: 26px;
                         top: 26px;
                         left: 51px;
+                        object-fit: cover;
                         z-index: 1
                     }
                     
@@ -374,6 +378,9 @@
                         align-items: center;
                         color: #FFFFFF;
                         flex-wrap: wrap;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 5;
                     }
                     /* ==================ROW 2======================
      */
@@ -391,6 +398,7 @@
                         position: absolute;
                         z-index: 2;
                         margin-left: 38px;
+                        object-fit: cover;
                     }
                     
                     .text__left__image2 {
@@ -398,7 +406,8 @@
                         height: 412px;
                         position: absolute;
                         margin-top: 35px;
-                        z-index: 1
+                        z-index: 1;
+                        object-fit: cover;
                     }
                     
                     .text-left2 {
@@ -427,6 +436,9 @@
                         color: #FFFFFF;
                         opacity: 0.6;
                         margin-left: 6px !important;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .line__2 {
@@ -459,6 +471,9 @@
                         align-items: center;
                         text-align: right;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
                     }
                     
                     .text-left__2 {
@@ -471,6 +486,9 @@
                         align-items: center;
                         text-align: right;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 6;
                     }
                     
                     h3 {
@@ -510,6 +528,9 @@
                         line-height: 57px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
                     }
                     
                     #col-sm-4__col1,
@@ -542,6 +563,9 @@
                         line-height: 42px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .section3_column1_row2 #section3_column1_row2 {
@@ -559,6 +583,9 @@
                         font-size: 22px;
                         line-height: 33px;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
                     }
                     
                     .section3_column1_row3 #section3_column1_row3 {
@@ -583,6 +610,9 @@
                         align-items: center;
                         text-align: right;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .line__section3 img {
@@ -590,6 +620,7 @@
                         height: 8.95px;
                         margin-top: 40px;
                         margin-left: 6px;
+                        object-fit: cover;
                     }
                     
                     .section3_column2_row1 #section3_column2_row1 {
@@ -608,6 +639,9 @@
                         line-height: 42px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .section3_column2_row2 #section3_column2_row2 {
@@ -626,6 +660,9 @@
                         font-size: 22px;
                         line-height: 33px;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
                     }
                     
                     .section3_column2_row3 #section3_column2_row3 {
@@ -654,6 +691,9 @@
                         line-height: 42px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .section3_column2_row2 #section3_column3_row2 {
@@ -672,6 +712,9 @@
                         font-size: 22px;
                         line-height: 33px;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
                     }
                     
                     #section3_column3_row3 {
@@ -733,6 +776,13 @@
                     .swiper__slide__image {
                         width: 480px!important;
                         height: 682px !important;
+                        object-fit: cover;
+                    }
+                    
+                    .swiper__slide__image img {
+                        width: 480px!important;
+                        height: 682px !important;
+                        object-fit: cover;
                     }
                     
                     .swiper-slide__image1 img {
@@ -917,6 +967,9 @@
                         line-height: 57px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     #pagination2 {
@@ -961,6 +1014,9 @@
                         line-height: 36px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .swiper-slide__icon__design1 {
@@ -990,7 +1046,10 @@
                         line-height: 36px;
                         align-items: center;
                         color: #FFFFFF;
-                        opacity: 0.6
+                        opacity: 0.6;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .swiper-slide__library1 {
@@ -1004,6 +1063,9 @@
                         margin-top: 14px !important;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .swiper-slide__icon__design2 {
@@ -1034,6 +1096,9 @@
                         align-items: center;
                         color: #FFFFFF;
                         opacity: 0.6;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     
                     .swiper-slide__library2 {
@@ -1046,6 +1111,9 @@
                         line-height: 42px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
                     }
                     /* ======================START FOOTER====================== */
                     
@@ -1213,6 +1281,9 @@
                         line-height: 27px;
                         align-items: center;
                         color: #FFFFFF;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 3;
                     }
                     
                     .col-sm-2 #getin__touch .btn {
